--- a/MiRadio-Startup/Views/Musicas/Details.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Details.cshtml
@@ -1,20 +1,22 @@
 ﻿@model MiRadio_Startup.Models.Musica
 
-
-
 @{
     ViewData["Title"] = "Detalles";
-
 }
+<!-- Estilo para la imagen de fondo -->
 <style>
     body {
-        background-image: url('/imagenes/imagen16.jpg');
-        background-size: cover; /* Ajusta el tamaño para cubrir toda la pantalla */
-        background-position: center; /* Centra la imagen */
+        background-image: url('/imagenes/imagen8.jpg'); /* Ruta a tu imagen de fondo */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100%;
+    }
+
+    .container {
+        padding: 20px; /* Ajusta el espaciado interior según sea necesario */
     }
 </style>
-
-
 
 <h1>Detalles de Música</h1>
 
@@ -78,6 +80,24 @@
                 @Html.DisplayFor(model => model.TamanoKB)
             </dd>
         </dl>
+
+        <h4>Comentarios</h4>
+        <hr />
+        @if (Model.Comentarios.Any())
+        {
+            foreach (var comentario in Model.Comentarios)
+            {
+                <div>
+                    <p><strong>@comentario.UsuarioS.Nombre:</strong> @comentario.Texto</p>
+                    <p>@comentario.FechaPublicacion</p>
+                </div>
+                <hr />
+            }
+        }
+        else
+        {
+            <p>No hay comentarios disponibles.</p>
+        }
     </div>
 </div>
 
