--- a/MiRadio-Startup/Views/Usuarios/Details.cshtml
+++ b/MiRadio-Startup/Views/Usuarios/Details.cshtml
@@ -4,6 +4,21 @@
     ViewData["Title"] = "Detalles";
 }
 
+<!-- Estilo para la imagen de fondo -->
+<style>
+    body {
+        background-image: url('/imagenes/imagen8.jpg'); /* Ruta a tu imagen de fondo */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100%;
+    }
+
+    .container {
+        padding: 20px; /* Ajusta el espaciado interior según sea necesario */
+    }
+</style>
+
 <h1>Detalles</h1>
 
 <div>
