--- a/MiRadio-Startup/Views/Usuarios/Delete.cshtml
+++ b/MiRadio-Startup/Views/Usuarios/Delete.cshtml
@@ -4,6 +4,19 @@
     ViewData["Title"] = "Eliminar";
 }
 
+<style>
+    body {
+        background-image: url('/imagenes/imagen8.jpg'); /* Ruta a tu imagen de fondo */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100%;
+    }
+
+    .container {
+        padding: 20px; /* Ajusta el espaciado interior según sea necesario */
+    }
+</style>
 <h1>Eliminar</h1>
 
 <h3>Are you sure you want to delete this?</h3>
