--- a/MiRadio-Startup/Views/Comentarios/Edit.cshtml
+++ b/MiRadio-Startup/Views/Comentarios/Edit.cshtml
@@ -3,7 +3,19 @@
 @{
     ViewData["Title"] = "Editar";
 }
+<style>
+    body {
+        background-image: url('/imagenes/imagen8.jpg'); /* Ruta a tu imagen de fondo */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100%;
+    }
 
+    .container {
+        padding: 20px; /* Ajusta el espaciado interior según sea necesario */
+    }
+</style>
 <!DOCTYPE html>
 <html>
 <head>
