--- a/MiRadio-Startup/Views/Musicas/Edit.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Edit.cshtml
@@ -3,6 +3,20 @@
 @{
     ViewData["Title"] = "Editar";
 }
+<!-- Estilo para la imagen de fondo -->
+<style>
+    body {
+        background-image: url('/imagenes/imagen8.jpg'); /* Ruta a tu imagen de fondo */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100%;
+    }
+
+    .container {
+        padding: 20px; /* Ajusta el espaciado interior según sea necesario */
+    }
+</style>
 
 <style>
     .table-blue-border {
